# tezedge

./: .drone.yml
async-ipc/src/: lib.rs
light_node/src/: configuration.rs  main.rs
rpc/src/services/: dev_services.rs  mempool_services.rs
shell/src/: chain_feeder.rs  chain_manager.rs  peer_branch_bootstrapper.rs
shell/src/mempool/: mempool_download_state.rs  mempool_prevalidator.rs
shell/src/state/: mod.rs  peer_state.rs
shell/src/validation/: mod.rs
shell/tests/common/: infra.rs
tezos/api/src/: ffi.rs
tezos/api/src/ocaml_conv/: to_ocaml.rs
tezos/context/: Cargo.toml
tezos/context-api/: Cargo.toml
tezos/context-api/src/: lib.rs
tezos/context-ipc-client/: Cargo.toml
tezos/context/src/: ffi.rs  initializer.rs  lib.rs  tezedge_context.rs
tezos/context/src/gc/: worker.rs
tezos/context/src/hash/: mod.rs
tezos/context/src/kv_store/: in_memory.rs  mod.rs  persistent.rs  readonly_ipc.rs
tezos/context/src/persistent/: file.rs  mod.rs
tezos/context/src/serialize/: in_memory.rs  mod.rs  persistent.rs
tezos/context/tests/: context.rs
tezos/conv/: Cargo.toml
tezos/conv/src/: to_ocaml.rs
tezos/protocol-ipc-client/: Cargo.toml
tezos/protocol-ipc-client/src/: lib.rs
tezos/protocol-ipc-client/tests-disabled/: bootstrap_storage_protocol_v1_test.rs  bootstrap_storage_test.rs  decode_context_data_test.rs  ffi_rpc_router_test.rs  ffi_tests.rs  init_storage_tests.rs  prevalidator_mempool_protocol_v1_test.rs  prevalidator_mempool_test.rs
tezos/protocol-ipc-messages/: Cargo.toml
tezos/sys/lib_tezos/: libtezos-ffi-distribution-summary.json
(+6 files in other folders)
