[package]
name = "tezos_protocol_ipc_client"
version = "1.9.0"
authors = ["Bruno Deferrari <bruno.deferrari@viablesystems.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
tokio = { version = "1.8", features = ["full"] }
nix = "0.19"
# local dependencies
async_ipc = { path = "../../async-ipc" }
crypto = { path = "../../crypto" }
tezos_api = { path = "../api" }
tezos_messages = { path = "../messages" }
tezos_protocol_ipc_messages = { path = "../protocol-ipc-messages" }
tezos_context_api = { path = "../context-api" }

[dev-dependencies]
anyhow = "1.0"
assert-json-diff = "2"
strum = "0.20"
thiserror = "1.0"
hex = "0.4"
serde_json = "1.0"
serial_test = "0.5"
